fix traces to fit oltp
